Pass driver as weak pointer to popup controllers.

Pass driver as weak pointer to popup controllers to prevent crashes.
Sometimes the password generation popup is not closed prior to
destroying of web contents; this makes it being destroyed during the
destruction of the web contents. However, at that point, the contents'
render frame host is already deleted, and the driver is no more valid.
But the popup keeps a raw pointer to the driver, and attempts to use it
in its Hide() function, which leads to a crash. This can be reprocuced
on MacOS at the website https://passport.yandex.ru/registration-new
with the password generator enabled.

TEST=On MacOS at the website https://passport.yandex.ru/registration-new
with the password generator enabled, click the 4th field (the password
field) to invoke the generator. Then press Cmd+Q: the browser should
close without a crash.

Bug: 782125
Change-Id: Id2095ddee3b7c02f6dcd9607c13856ddf97df2e9
Reviewed-on: https://chromium-review.googlesource.com/758256
Commit-Queue: Vasilii Sukhanov <vasilii@chromium.org>
Reviewed-by: Vasilii Sukhanov <vasilii@chromium.org>
Cr-Commit-Position: refs/heads/master@{#514804}