chrome/browser/ui/autofill/password_generation_popup_controller_impl.cc
@@ -49,7 +49,7 @@ PasswordGenerationPopupControllerImpl::GetOrCreate(
     const PasswordForm& form,
     int max_length,
     password_manager::PasswordManager* password_manager,
-    password_manager::PasswordManagerDriver* driver,
+    const base::WeakPtr<password_manager::PasswordManagerDriver>& driver,
     PasswordGenerationPopupObserver* observer,
     content::WebContents* web_contents,
     gfx::NativeView container_view) {
@@ -73,7 +73,7 @@ PasswordGenerationPopupControllerImpl::PasswordGenerationPopupControllerImpl(
     const gfx::RectF& bounds,
     const PasswordForm& form,
     int max_length,
-    password_manager::PasswordManagerDriver* driver,
+    const base::WeakPtr<password_manager::PasswordManagerDriver>& driver,
     PasswordGenerationPopupObserver* observer,
     content::WebContents* web_contents,
     gfx::NativeView container_view)
@@ -202,8 +202,10 @@ void PasswordGenerationPopupControllerImpl::HideAndDestroy() {
 }
 
 void PasswordGenerationPopupControllerImpl::Hide() {
-  static_cast<ContentAutofillDriver*>(driver_->GetAutofillDriver())
-      ->RemoveKeyPressHandler();
+  if (driver_) {
+    static_cast<ContentAutofillDriver*>(driver_->GetAutofillDriver())
+        ->RemoveKeyPressHandler();
+  }
 
   if (view_)
     view_->Hide();
