chrome/browser/ui/autofill/password_generation_popup_controller_impl.h
@@ -57,7 +57,7 @@ class PasswordGenerationPopupControllerImpl
       const PasswordForm& form,
       int max_length,
       password_manager::PasswordManager* password_manager,
-      password_manager::PasswordManagerDriver* driver,
+      const base::WeakPtr<password_manager::PasswordManagerDriver>& driver,
       PasswordGenerationPopupObserver* observer,
       content::WebContents* web_contents,
       gfx::NativeView container_view);
@@ -77,7 +77,7 @@ class PasswordGenerationPopupControllerImpl
       const gfx::RectF& bounds,
       const PasswordForm& form,
       int max_length,
-      password_manager::PasswordManagerDriver* driver,
+      const base::WeakPtr<password_manager::PasswordManagerDriver>& driver,
       PasswordGenerationPopupObserver* observer,
       content::WebContents* web_contents,
       gfx::NativeView container_view);
@@ -127,7 +127,7 @@ class PasswordGenerationPopupControllerImpl
   void CalculateBounds();
 
   PasswordForm form_;
-  password_manager::PasswordManagerDriver* driver_;
+  base::WeakPtr<password_manager::PasswordManagerDriver> driver_;
 
   // May be NULL.
   PasswordGenerationPopupObserver* observer_;
