chrome/browser/ui/autofill/password_generation_popup_view_browsertest.cc
@@ -30,7 +30,8 @@ class TestPasswordGenerationPopupController :
             10,
             password_manager::ContentPasswordManagerDriverFactory::
                 FromWebContents(web_contents)
-                    ->GetDriverForFrame(web_contents->GetMainFrame()),
+                    ->GetDriverForFrame(web_contents->GetMainFrame())
+                    ->AsWeakPtr(),
             nullptr /* PasswordGenerationPopupObserver*/,
             web_contents,
             native_view) {}
@@ -88,5 +89,14 @@ IN_PROC_BROWSER_TEST_F(PasswordGenerationPopupViewTest,
   controller_->Show(true /* display password */);
 }
 #endif
+
+// Verify that destroying web contents with visible popup does not crash.
+IN_PROC_BROWSER_TEST_F(PasswordGenerationPopupViewTest,
+                       CloseWebContentsWithVisiblePopup) {
+  controller_ = new autofill::TestPasswordGenerationPopupController(
+      GetWebContents(), GetNativeView());
+  controller_->Show(false);
+  GetWebContents()->Close();
+}
 
 }  // namespace autofill
